Image Cropper css changed because of 'new Tab Issues' changes at server of that package

--- a/src/app/img-cropper/img-cropper.component.scss
+++ b/src/app/img-cropper/img-cropper.component.scss
@@ -2,6 +2,11 @@
 
 .wrapper{
     margin: 10px;
+    scrollbar-width: none; /* Firefox 64 */
+    -ms-overflow-style: none; /* Internet Explorer 11 */
+    &::-webkit-scrollbar { /** WebKit */
+        display: none;
+    }
 }
 .button-row{
     display: flex;
